add_subdirectory(enemies)
add_subdirectory(towers)
add_subdirectory(states)

target_sources(TowerDefense
    PRIVATE
        application.hpp
        application.cpp
        resource_identifiers.hpp
        entity.hpp
        entity.cpp
        bullet.hpp
        bullet.cpp
        enemy.hpp
        enemy.cpp
        game.hpp
        game.cpp
        game_field.hpp
        game_field.cpp
        main.cpp
        position.hpp
        resource_holder.hpp
        scene_node.hpp
        scene_node.cpp
        sprite_node.hpp
        sprite_node.cpp
        category.hpp
        command.hpp
        command.cpp
        command_queue.hpp
        command_queue.cpp
        player.hpp
        player.cpp
        tower.hpp
        tower.cpp
        state_identifiers.hpp
        state.hpp
        state.cpp
        state_stack.hpp
        state_stack.cpp
        ghost.hpp
        ghost.cpp
        
)