add_subdirectory(enemies)
add_subdirectory(towers)
add_subdirectory(states)

target_sources(TowerDefense
    PRIVATE
    application.cpp
    application.hpp
	bullet.cpp
	bullet.hpp
	button.cpp
	button.hpp
	category.hpp
	command.cpp
	command.hpp
    command_queue.cpp
    command_queue.hpp
	component.cpp
	component.hpp
	container.cpp
	container.hpp
	data_tables.cpp
	data_tables.hpp
	entity.cpp
	entity.hpp
	game.cpp
	game.hpp
    game_field.cpp
    game_field.hpp
    ghost.cpp
    ghost.hpp
	label.cpp
	label.hpp
	main.cpp
	player.cpp
    player.hpp
	resource_holder.hpp
    resource_identifiers.hpp
    scene_node.cpp
    scene_node.hpp
	sprite_node.cpp
    sprite_node.hpp
	state_identifiers.hpp
	state_stack.cpp
	state_stack.hpp
    tower.cpp
    tower.hpp 
)